working on basic username/password auth
