# swagger.yaml
@@ -44,13 +44,36 @@ paths:
         
         404:
           description: "Unsupported Language"
+  
+  /number/languages:
+    get:
+      tags:
+      - "number"
+      summary: "Gets the available language codes for the number audio generator"
+      description: ""
+      operationId: "GetNumberLanguages"
+      produces: 
+        - "application/json"
+      responses:
+        200:
+          description: "list of available language codes"
+          schema:
+            $ref: "#/definitions/GetNumberLanguagesResponse"
+            
+        400:
+          description: "bad request"
+        
+        404:
+          description: "Unsupported Language"
+      
+        
           
 securityDefinitions:
-  api_key:
-    type: "apiKey"
-    name: "api_key"
-    in: "header"
-    
+  basicAuth:
+    type: basic
+security: 
+  - basicAuth: []
+
 definitions:
   NumberRequest:
     type: "object"
@@ -76,6 +99,12 @@ definitions:
         type: "string"
         format: "url"
         description: "A url referring to the generated audio file"
+        
+  GetNumberLanguagesResponse:
+    type: "array"
+    items:
+      type: "string"
+      
   
   Tag:
     type: "object"
